--- a/setup/Makefile
+++ b/setup/Makefile
@@ -1,3 +1,4 @@
 make init:
-	pip install numpy pandas matplotlib seaborn
-	pip install pystan==2.19.1.1 fbprophet
+	pip install numpy pandas matplotlib seaborn plotly
+	pip install pystan==2.19.1.1
+	pip install --force-reinstall setup/fbprophet-0.7.1-py3-none-any.whl
